# insee_internship

./: .gitignore  index.qmd  notebook.ipynb  pyproject.toml
.github/workflows/: pages.yml
benchmark/: run.py  run_all.py  summarize.py  train.py
benchmark/argo/: benchmark.yaml
benchmark/configs/: fasttext.yaml  fasttext_transformer.yaml
benchmark/results/fasttext/: ag_news_20260504_130105.json  amazon_20260504_124934.json  clinc150_20260504_144830.json  imdb_20260504_123122.json  sst2_20260504_101232.json  subj_20260504_143026.json
