[project]
name = "textclsf-insee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torchtextclassifiers[huggingface]",
    "transformers>=5.6.2",
]

[tool.uv.sources]
torchtextclassifiers = { git = "https://github.com/InseeFrLab/torchTextClassifiers.git" }